
// Interface for translation services
interface Translation {
    String translate(String text, String direction) throws TranslationException;
}