public class TranslationException extends Exception {
    public TranslationException(String message) {
        super(message);
    }
}